flask-app-for-github-workflows/apps/flask-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: flask-web-service
  namespace: production
  labels:
    app: flask-web
spec:
  type: NodePort  # Use NodePort for Minikube (no LoadBalancer support)
  selector:
    app: flask-web-application
  ports:
    - protocol: TCP
      port: 80       # External port exposed by the service
      targetPort: 5000  # Port where the Flask app is running inside the containe
